--- a/core/templates/core/jursit_panel.html
+++ b/core/templates/core/jursit_panel.html
@@ -5,9 +5,8 @@
   <div class="panel panel-default">
       <div class="panel-body">
           <div class="list-group">
-{#              <a href="{% url 'core:create_branch' %}" type="button" class="btn btn-primary btn-raised btn-lg btn-block" >ایجاد شعبه</a>#}
-              <a href="{% url 'core:branch_list' %}"  type="button" class="btn btn-success btn-raised btn-lg btn-block"> jursit panel</a>
-{#              <a href="{% url 'core:create_employee' %}"  type="button" class="btn btn-primary btn-raised btn-lg btn-block">ایجاد کارمند</a>#}
+              <a href="{% url 'core:cheque_issue_requests' %}" type="button" class="btn btn-primary btn-raised btn-lg btn-block" >لیست درخواست‌های وصول چک</a>
+              <a href="{% url 'core:block_account' %}"  type="button" class="btn btn-primary btn-raised btn-lg btn-block">مسدود کردن حساب کاربر</a>
 {#              <a href="{% url 'core:employee_list' %}"  type="button" class="btn btn-success btn-raised btn-lg btn-block">لیست کارمند‌ها</a>#}
 {#              <a href="{% url 'core:customers' %}"  type="button" class="btn btn-primary btn-raised btn-lg btn-block">لیست مشتری‌ها</a>#}
 {#              <a href="{% url 'core:create_bill_type' %}"  type="button" class="btn btn-success btn-raised btn-lg btn-block">تعریف قبض جدید</a>#}
