--- a/core/templates/core/cheque_issue.html
+++ b/core/templates/core/cheque_issue.html
@@ -1,7 +1,8 @@
 {% extends "core/background.html" %}
 {% load widget_tweaks %}
 {% block pageBody %}
-  {% for check_issue in check_issue_list %}
+
+  {% for cheque_issue in cheque_issue_list %}
 {#      {% if transaction.account.real_owner.first_name == 'rasa' %}#}
 {#      input_account#}
 
@@ -9,15 +10,15 @@
           <div class="panel panel-default">
               <div class="panel-body">
                   <div class="list-group">
-                    <a href="{% url 'core:cheque_detail' check_issue.id %}">
+                    <a href="{% url 'core:cheque_detail' cheque_issue.id %}">
                       <p><strong>آی دی چک::</strong>
-                          {{ check_issue.cheque}}
+                          {{ cheque_issue.cheque}}
                       <br>
                       <strong>تاریخ:</strong>
-                        {{ check_issue.date|date:"SHORT_DATE_FORMAT"}}
+                        {{ cheque_issue.date|date:"SHORT_DATE_FORMAT"}}
                       <br>
                       <strong>مقدار وجه:</strong>
-                        {{ check_issue.amount}}
+                        {{ cheque_issue.amount}}
                       </p>
                     </a>
                   </div>
