--- a/core/templates/core/manager_panel.html
+++ b/core/templates/core/manager_panel.html
@@ -9,10 +9,10 @@
 {#                  <P>{{ f }}</P>#}
 {#              {% endfor %}#}
 {#             <p> {{ user. }}</p>#}
-              <a href="{% url 'core:create_employee' %}"  type="button" class="btn btn-primary btn-raised btn-lg btn-block">ایجاد کارمند</a>
-              <a href="{% url 'core:employee_list' %}"  type="button" class="btn btn-success btn-raised btn-lg btn-block">لیست کارمند‌ها</a>
-              <a href="{% url 'core:create_employee' %}"  type="button" class="btn btn-primary btn-raised btn-lg btn-block">ایجاد دستگاه خود پرداز</a>
-              <a href="{% url 'core:employee_list' %}"  type="button" class="btn btn-success btn-raised btn-lg btn-block">تعیین مسئول دستگاه</a>
+              <a href="{% url 'core:create_employee_manager' %}"  type="button" class="btn btn-primary btn-raised btn-lg btn-block">ایجاد کارمند</a>
+              <a href="{% url 'core:employee_list_manager' %}"  type="button" class="btn btn-success btn-raised btn-lg btn-block">لیست کارمند‌ها</a>
+              <a href="{% url 'core:create_atm' %}"  type="button" class="btn btn-primary btn-raised btn-lg btn-block">ایجاد دستگاه خود پرداز</a>
+              <a href="{% url 'core:set_maintainer' %}"  type="button" class="btn btn-success btn-raised btn-lg btn-block">تعیین مسئول دستگاه</a>
               <a href="{% url 'core:create_employee' %}"  type="button" class="btn btn-primary btn-raised btn-lg btn-block">گزارش گیری</a>
           </div>
     </div>
