--- a/core/templates/core/simple_from_with_single_button.html
+++ b/core/templates/core/simple_from_with_single_button.html
@@ -28,6 +28,7 @@
                             <div class="col-xs-10 col-xs-offset-1">
                                 {{ field.label }}
                                 {% render_field field class="form-control" %}
+                                {{ field.help_text }}
                             </div>
                         </div>
                     {% endfor %}
