--- a/core/templates/core/cashier_panel.html
+++ b/core/templates/core/cashier_panel.html
@@ -25,9 +25,9 @@
               <a href="{% url 'core:transfer_money' %}"  type="button" class="btn btn-success btn-raised btn-lg btn-block">انتقال وجه</a>
               <a href="{% url 'core:bill_create' %}"  type="button" class="btn btn-success btn-raised btn-lg btn-block">تعریف قبض جدید</a>
               <a href="{% url 'core:card_issue' %}"  type="button" class="btn btn-primary btn-raised btn-lg btn-block">صدور کارت بانکی</a>
-              <a href="{% url 'core:cheque_application' %}"  type="button" class="btn btn-success btn-raised btn-lg btn-block">صدور چک</a>
               <a href="{% url 'core:cheque_issue_cash' %}"  type="button" class="btn btn-success btn-raised btn-lg btn-block">وصول نقدی چک</a>
               <a href="{% url 'core:cheque_issue_toAccount' %}"  type="button" class="btn btn-success btn-raised btn-lg btn-block">خواباندن چک به حساب</a>
+              <a href="{% url 'core:cheque_application' %}"  type="button" class="btn btn-primary btn-raised btn-lg btn-block">صدور چک</a>
               <a href="{% url 'core:loan_request' %}"  type="button" class="btn btn-primary btn-raised btn-lg btn-block">درخواست وام</a>
               <a href="{% url 'core:payment_order' %}"  type="button" class="btn btn-success btn-raised btn-lg btn-block">ایجاد حواله‌های منظم</a>
           </div>
