--- a/core/templates/core/jursit_cheque_issue.html
+++ b/core/templates/core/jursit_cheque_issue.html
@@ -10,8 +10,8 @@
           <div class="panel panel-default">
               <div class="panel-body">
                   <div class="list-group">
-                    <a href="{% url 'core:cheque_detail' cheque_issue.id %}">
-                      <p><strong>آی دی چک::</strong>
+                    <a href="{% url 'core:jursit_cheque_detail' cheque_issue.id %}">
+                      <p><strong>آی دی چک:</strong>
                           {{ cheque_issue.cheque}}
                       <br>
                       <strong>تاریخ:</strong>
