--- a/core/templates/core/auditor_panel.html
+++ b/core/templates/core/auditor_panel.html
@@ -5,7 +5,8 @@
   <div class="panel panel-default">
       <div class="panel-body">
           <div class="list-group">
-              <a href="{% url 'core:create_branch' %}" type="button" class="btn btn-primary btn-raised btn-lg btn-block" >auditor panel </a>
+              <a href="{% url 'core:auditor_cheque_issue_requests' %}" type="button" class="btn btn-primary btn-raised btn-lg btn-block" >لیست درخواست‌ وصول چک</a>
+              <a href="{% url 'core:auditor_loan_requests' %}" type="button" class="btn btn-primary btn-raised btn-lg btn-block" >لیست درخواست‌ وام</a>
 {#              <a href="{% url 'core:branch_list' %}"  type="button" class="btn btn-success btn-raised btn-lg btn-block">لیست شعب</a>#}
 {#              <a href="{% url 'core:create_employee' %}"  type="button" class="btn btn-primary btn-raised btn-lg btn-block">ایجاد کارمند</a>#}
 {#              <a href="{% url 'core:employee_list' %}"  type="button" class="btn btn-success btn-raised btn-lg btn-block">لیست کارمند‌ها</a>#}
