--- a/core/templates/core/jursit_panel.html
+++ b/core/templates/core/jursit_panel.html
@@ -5,16 +5,9 @@
   <div class="panel panel-default">
       <div class="panel-body">
           <div class="list-group">
-              <a href="{% url 'core:cheque_issue_requests' %}" type="button" class="btn btn-primary btn-raised btn-lg btn-block" >لیست درخواست‌های وصول چک</a>
+              <a href="{% url 'core:jursit_cheque_issue_requests' %}" type="button" class="btn btn-primary btn-raised btn-lg btn-block" >لیست درخواست‌های وصول چک</a>
+              <a href="{% url 'core:jursit_loan_requests' %}"  type="button" class="btn btn-success btn-raised btn-lg btn-block">لیست درخواست‌های وام</a>
               <a href="{% url 'core:block_account' %}"  type="button" class="btn btn-primary btn-raised btn-lg btn-block">مسدود کردن حساب کاربر</a>
-{#              <a href="{% url 'core:employee_list' %}"  type="button" class="btn btn-success btn-raised btn-lg btn-block">لیست کارمند‌ها</a>#}
-{#              <a href="{% url 'core:customers' %}"  type="button" class="btn btn-primary btn-raised btn-lg btn-block">لیست مشتری‌ها</a>#}
-{#              <a href="{% url 'core:create_bill_type' %}"  type="button" class="btn btn-success btn-raised btn-lg btn-block">تعریف قبض جدید</a>#}
-{#              <a href="{% url 'core:SystemConfiguration' %}"  type="button" class="btn btn-primary btn-raised btn-lg btn-block">تعیین کارمزد</a>#}
-{#              <a href="{% url 'core:create_account' %}"  type="button" class="btn btn-success btn-raised btn-lg btn-block">ایجاد حساب</a>#}
-{#              <a href="{% url 'core:create_customer' %}"  type="button" class="btn btn-success btn-raised btn-lg btn-block">ایجاد مشتری</a>#}
-{#              <a href="{% url 'core:accounts' %}"  type="button" class="btn btn-primary btn-raised btn-lg btn-block">لیست حساب‌ها</a>#}
-{#              <a href="{% url 'core:transactions' %}"  type="button" class="btn btn-success btn-raised btn-lg btn-block">مشاهده تراکنش‌ها</a>#}
           </div>
     </div>
   </div>
