--- a/core/templates/core/transactions.html
+++ b/core/templates/core/transactions.html
@@ -19,6 +19,9 @@
                       <strong>نوع:</strong>
                         {{ transaction.get_transaction_type_display}}
                       </p>
+                      <strong>مبلغ:</strong>
+                        {{ transaction.amount}}
+                      </p>
                     </a>
                   </div>
               </div>
