--- a/core/templates/core/background.html
+++ b/core/templates/core/background.html
@@ -37,7 +37,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="active navbar-brand" href="/">بانک</a>
+            <a class="active navbar-brand" href="{% url 'core:main_panel' %}">بانک</a>
         </div>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav">
